--- a/style.css
+++ b/style.css
@@ -3,31 +3,34 @@
     margin-block-end: 0;
     color: white;
 }
-.container{
-    max-width: 1480px;
+.container-alt{
+    max-width: 1680px;
     padding: 0 15px;
     margin: 0 auto;
 }
-/* .container {
+.container-inner{
     max-width: 1300px;
     padding: 0 15px;
     margin: 0 auto;
-} */
+}
 ul{
     list-style-type: none;
 }
 a{
     text-decoration: none;
 }
-header{
+.bg-header{
     height: 121px;
-    background-color: #000000;
+    background-color: rgba(12, 11, 8, 1);;
 }
 .header{
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding-top: 30px;
+}
+.spoon{
+    margin-left: 120px;
 }
 .list-nav-site{
     display: flex;
@@ -70,8 +73,8 @@ header{
     border-left: 1px solid white;
 }
 .hero{
-    height: 1020px;
-    background-color: #000000;
+    height: 920px;
+    background-color: #0c0b08
 }
 .sidetext{
     transform: rotate(180deg);
@@ -81,6 +84,12 @@ header{
     gap: 40px;
     align-items: center;
     justify-content: center;
+    font-family: "Open Sans";
+        font-size: 18px;
+        font-weight: 400;
+        text-align: left;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
 }
 .flavours{
         font-family: "Cormorant Upright";
@@ -91,7 +100,6 @@ header{
         text-decoration-skip-ink: none;
         padding-left: 120px;
         padding-top: 100px;
-        margin-bottom: 50px;
 }
 .hero-title{
         font-family: "Cormorant Upright";
@@ -126,6 +134,7 @@ header{
 }
 .hero-content{
     display: flex;
+    /* justify-content: space-around; */
     gap: 100px;
     margin-bottom: 100px;
 }
@@ -136,15 +145,33 @@ header{
         text-align: center;
         text-underline-position: from-font;
         text-decoration-skip-ink: none;
-        color:rgba(12, 11, 8, 1);
         width:157px;
-            height: 44px;
-            padding: 8px 32px 8px 32px;
+        height: 44px;
+        color:#0c0b08;
+        
+         padding: 8px 32px 8px 32px;
         background-color: #DCCA87;
 }
+
 .div-hero-button{
     margin-top: 30px;
     padding-left: 120px;
+}
+.hero-scroll{
+    width: 100%;
+    display: flex;
+    justify-content: end;
+}
+.hero-scroll>p{
+    font-family: "Cormorant Upright";
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 28px;
+        letter-spacing: 0.04em;
+        text-align: left;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: #DCCA87;
 }
 .hero-numbers{
     display: flex;
@@ -191,8 +218,8 @@ header{
 }
 .list-section-about-us{
     display: flex;
-    gap: 150px;
-
+    gap: 100px;
+    padding-left: 1px;
 }
 .comment-about-us{
         font-family: "Open Sans";
@@ -225,4 +252,248 @@ padding-top: 150px;
 }
 .li-list-section-about-us{
     padding-top: 350px;
+}
+.background-hero{
+    height: 1099px;
+    background-image: url(./img/backgrpound.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.foodanddrinks{
+    height: 1045px;
+    background-image: url(./img/backgrpound.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.poison{
+    height: 1150px;
+    background-color: #0C0c0c;
+}
+.happy-hours{
+    height: 900px;
+    background-image: url(./img/bghappyhours.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.todays-special{
+    height: 1250px;
+    background-color: #0C0c0c;
+}
+.Find-us{
+    height: 992px;
+    background-image: url(./img/backgrpound.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+footer{
+    height: 1058px;
+    background-image: url(./img/backgrpound.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.reservations{
+    height: 770px;
+    background: #0c0b08
+}
+.div-reservations{
+    width: 1364px;
+    height: 466px;
+    border: 1px solid rgba(220, 202, 135, 0.2); 
+    background-color: #0C0c0c; 
+}
+.div-div-reservations{
+    padding-top: 150px;
+}
+.div-p-reservations{
+    display: flex;
+    justify-content: center;
+    padding-top: 50px;
+        font-family: "Cormorant Upright";
+        font-size: 23px;
+        font-weight: 700;
+        text-align: center;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+}
+.reservations-spoon{
+    display: flex;
+    justify-content: center;
+}
+.div-title-reservations{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 80px;
+}
+.title-reservations{
+    font-family: "Cormorant Upright";
+        font-size: 64px;
+        font-weight: 600;
+        text-align: center;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: #DCCA87;
+}
+.list-reservations{
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 50px;
+    padding-inline-start: 0;
+}
+.li-selector{
+    width: 412px;
+    height: 60px;
+    border: 1px solid #F5efdb;
+}
+.selector{
+        font-family: "Cormorant Upright";
+        font-size: 16px;
+        font-weight: 600;
+        text-align: left;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: #AAAAAA;
+        background-color: #0C0c0c;
+        width: 410px;
+        height: 60px;
+}
+.button-reservation{
+    display: flex;
+    justify-content: center;
+}
+.list-menu{
+    height: 900px;
+    background-image:
+    url(./img/bgbeer.png);
+    background-repeat: no-repeat;
+}
+.list-menus{
+    display: flex;
+    flex-direction: column;
+    gap: 70px;
+    justify-content: center;
+    padding-top: 250px;
+}
+.type-of-menu{
+        font-family: "Cormorant Upright";
+        font-size: 64px;
+        font-weight: 600;
+        text-align: left;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+}
+.type-of-menu:hover{
+    text-decoration: underline;
+}
+.comment-special{
+    display: flex;
+    justify-content: center;
+    padding-top: 100px;
+}
+.comment-special>p{
+    font-family: "Cormorant Upright";
+        font-size: 23px;
+        font-weight: 700;
+        text-align: center;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: #FFFFFF;
+}.special-spoon{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+    margin-top: 7px;
+}
+.title-special{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+.title-special>h3{
+    font-family: "Cormorant Upright";
+        font-size: 64px;
+        font-weight: 600;
+        text-align: center;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: #DCCA87;
+}
+.list-specials{
+    display: flex;
+    width: 1300px;
+    height: 660px;
+    gap: 32px;
+    flex-wrap: wrap
+}
+.list-specials>li{
+    width: 380px;
+    height: 596px
+    
+}
+.menu-drinks{
+        font-family: "Cormorant Upright";
+        font-size: 45px;
+        font-weight: 600;
+        text-align: center;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        width: 243px;
+        height: 58px;
+        margin-bottom: 50px;
+}
+.list-drinks{
+    display: flex;
+    flex-wrap: wrap;
+}
+.name-drinks{
+    width: 192px;
+    height: 30px;
+        font-family: "Cormorant Upright";
+        font-size: 23px;
+        font-weight: 700;
+        text-align: left;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: #DCCA87;
+}
+.div-menu-drinks{
+    display: flex;
+    justify-content: center;
+}
+.line{
+    width: 119px;
+    height: 1px;
+    background-color: #FAFAFA;
+    align-self: center;
+}
+.price{
+        font-family: "Cormorant Upright";
+        font-size: 23px;
+        font-weight: 700;
+        text-align: left;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        width: 37px;
+        height: 30px;
+}
+.firm{
+        font-family: "Open Sans";
+        font-size: 16px;
+        font-weight: 400;
+        text-align: left;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: #AAAAAA;
+        width: 412px;
+        height: 28px;
+        margin-bottom: 30px;
+}
+.div-li-menu{
+    display: flex;
+    gap: 30px;
+    margin-bottom: 20px;
+}
+.button-specials{
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
 }
