--- a/style.css
+++ b/style.css
@@ -287,7 +287,7 @@ padding-top: 150px;
     padding-top: 350px;
 }
 .background-hero{
-    height: 1099px;
+    height: 1043px;
     background-image: url(./img/backgrpound.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -751,4 +751,591 @@ footer{
 }
 .img-laurels{
     padding-top: 100px;
+}
+.updates{
+    height: 1385px;
+    background-color: #0c0b08;
+}
+.title-blogs{
+        font-family: "Cormorant Upright";
+        font-size: 23px;
+        font-weight: 700;
+        text-align: center;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        padding-top: 70px;
+}
+.spoon-updates{
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+}
+.title-updates{
+        font-family: "Cormorant Upright";
+        font-size: 64px;
+        font-weight: 600;
+        text-align: center;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: #DCCA87;
+}
+.list-updates{
+    display: flex;
+    gap: 32px;
+    padding-top: 50px;
+}
+.meal-and-info{
+    width: 412px;
+    height: 774px;
+}
+
+.date{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+        font-family: "Open Sans";
+        font-size: 16px;
+        font-weight: 400;
+        text-align: left;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: #FAFAFA;
+}
+.info-about-update{
+    font-family: "Cormorant Upright";
+        font-size: 32px;
+        font-weight: 400;
+        text-align: left;
+        text-decoration-style: solid;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: #DCCA87;
+        text-transform: capitalize;
+        padding-top: 30px;
+}
+.info-about-update>p {
+    font-family: "Cormorant Upright";
+    font-size: 32px;
+    font-weight: 400;
+    text-align: left;
+    text-decoration-style: solid;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #DCCA87;
+    text-transform: capitalize;
+
+}
+.small-text-info{
+        font-family: Open Sans;
+        font-size: 16px;
+        font-weight: 400;
+        text-align: left;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: #AAAAAA;
+        padding-top: 30px;
+}
+.text-read-more{
+        font-family: "Cormorant Upright";
+        font-size: 16px;
+        font-weight: 700;
+        text-align: left;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: #DCCA87;
+        padding-top: 30px;
+}
+.logo-updates{
+    display: flex;
+    justify-content: end;
+}
+.info-about-update:hover,
+.info-about-update>p:hover{
+    text-decoration: underline #DCCA87;
+}
+.gallery{
+    height: 800px;
+    background-image: url(./img/backgrpound.png);
+    background-repeat: no-repeat;
+
+}
+.section-gallery{
+    display: flex;
+    gap: 40px;
+    padding-top: 150px;
+    padding-left: 200px;
+}
+.section-gallery>div:nth-child(1){
+    padding-top: 100px;
+}
+.text-instagram{
+        font-family: "Cormorant Upright";
+        font-size: 23px;
+        font-weight: 700;
+        text-align: left;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+}
+.title-gallery{
+        font-family: "Cormorant Upright";
+        font-size: 64px;
+        font-weight: 600;
+        text-align: left;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: #DCCA87;
+        padding-top: 15px;
+}
+.small-text-gallery{
+        font-family: "Open Sans";
+        font-size: 16px;
+        font-weight: 400;
+        text-align: left;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: #AAAAAA;
+        padding-top: 20px;
+        margin-bottom: 20px;
+}
+.newsletter-wrapper{
+    height: 442px;
+    background-color: #0C0c0c;
+    border: 1px solid rgba(220, 202, 135, 0.2);
+}
+footer{
+    padding-top: 30px;
+}
+.title-newsletter{
+        font-family: "Cormorant Upright";
+        font-size: 23px;
+        font-weight: 700;
+        text-align: center;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: #FFFFFF;
+        padding-top: 50px;
+}
+.newsletter-spoon{
+    display: flex;
+    justify-content: center;
+}
+.title-subscribe{
+        font-family: "Cormorant Upright";
+        font-size: 64px;
+        font-weight: 600;
+        text-align: center;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color:#DCCA87 ;
+}
+.never-miss-updates{
+        font-family: "Open Sans";
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 28px;
+        letter-spacing: 0.04em;
+        text-align: center;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        padding-top: 30px;
+}
+.buttons-newsletter{
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+    padding-top: 70px;
+}
+.email-form{
+    width: 635px;
+    height: 60px;
+    background-color: transparent;
+    
+    color: rgba(170, 170, 170);
+        font-family: "Cormorant Upright";
+        font-size: 16px;
+        font-weight: 600;
+        text-align: left;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        padding-left: 20px;
+        border: 1px solid #DCCA87;
+}
+.subscribe{
+    width: 129px;
+        height: 44px;
+        padding: 8px 32px 8px 32px;
+        gap: 10px;
+        border: 1px solid transparent;
+    margin-top: 10px;
+    background-color: #DCCA87;
+        font-family: "Cormorant Upright";
+        font-size: 16px;
+        font-weight: 700;
+        text-align: left;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+    color: #0C0c0c;
+}
+.rights{
+        font-family: "Open Sans";
+        font-size: 16px;
+        font-weight: 400;
+        text-align: center;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: #AAAAAA;
+}
+.rights-footer{
+    display: flex;
+    justify-content: center;
+}
+.line-top{
+    display: flex;
+    justify-content: end;
+}
+
+.text-top{
+    display: flex;
+    justify-content: end;
+
+}
+.text-top>p{
+    font-family: "Cormorant Upright";
+        font-size: 16px;
+        font-weight: 700;
+        text-align: left;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: #DCCA87;
+        padding-right: 15px;
+        text-transform: uppercase;
+}
+.list-information{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    height: 236px;
+    padding-right: 100px;
+}
+.contact-us{
+        font-family: "Cormorant Upright";
+        font-size: 32px;
+        font-weight: 400;
+        text-align: center;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color:  rgba(245, 239, 219, 1);;
+}
+.street,.phone-number,.schedule-monday-friday,
+.schedule-saturday-sunday,.time{
+        font-family: "Open Sans";
+        font-size: 16px;
+        font-weight: 400;
+        text-align: center;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: #AAAAAA;
+}
+.schedule{
+        font-family: "Cormorant Upright";
+        font-size: 32px;
+        font-weight: 400;
+        text-align: center;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: #F5EfDB;
+        margin-bottom: 20px;
+}
+.schedule-saturday-sunday{
+    padding-top: 20px;
+}
+.street{
+    padding-top: 20px;
+    margin-bottom: 20px;
+}
+.phone-number{
+    padding-top: 10px;
+}
+.main-title{
+    font-family: "Cormorant Upright";
+        font-size: 64px;
+        font-weight: 700;
+        text-align: center;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: #DCCA87;
+}
+.lyrics-footer{
+        font-family: "Open Sans";
+        font-size: 16px;
+        font-weight: 400;
+        text-align: center;
+        line-height: 30px;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+}
+.lyrics-footer>p{
+    font-family: "Open Sans";
+        font-size: 16px;
+        font-weight: 400;
+        text-align: center;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+}
+.footer-logos{
+    padding-top: 15px;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+.title-hero-bar{
+    font-family: "Cormorant Upright";
+        font-weight: 700;
+        font-size: 181px;
+        line-height: 235.3px;
+        letter-spacing: 5%;
+        text-align: center;
+        padding-top: 150px;
+}
+.div-title-hero-bar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.numbers-bar{
+    writing-mode: vertical-lr;
+    display: flex;
+    gap: 10px;
+    padding-left: 100%;
+    font-family: "Cormorant Upright";
+        font-weight: 600;
+        font-size: 16px;
+        padding-top: 100px;
+}
+.numbers-bar>div {
+    align-self: center;
+    width: 1px;
+    height: 16px;
+    background-color: #DCCA87;
+}
+.background-hero-bar{
+    background-image: url(./img/kitchen.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+.hero-bar-scroll{
+    font-family: "Cormorant Upright";
+        font-weight: 700;
+        font-size: 16px;
+    text-align: center;
+    color:#DCCA87;
+    padding-top: 30px;
+}
+.line-hero-bar{
+    width: 1px;
+    height: 61px;
+    background-color: white;
+
+}
+.div-line-hero-bar{
+    display: flex;
+    justify-content: center;
+}
+.list-food-and-drinks{
+    display: flex;
+    gap: 100px;
+}
+.image-whiskey>div{
+    height: 100px;
+}
+.about-us-bar{
+    font-family: "Cormorant Upright";
+        font-weight: 700;
+        font-size: 23px;
+    padding-top: 30px;
+}
+.title-food-and-drinks{
+    font-family: "Cormorant Upright";
+        font-weight: 600;
+        font-size: 64px;
+    padding-top: 35px;
+    color: #DCCA87;
+}
+.title-food-and-drinks>p{
+    font-family: "Cormorant Upright";
+    font-weight: 600;
+    font-size: 64px;
+    text-transform: capitalize;
+    color: #DCCA87;
+}
+.info-food-and-drinks{
+    font-family: "Open Sans";
+        font-weight: 400;
+        font-size: 16px;
+    color: #AAAAAA;
+    width: 523px;
+    padding-top: 20px;
+    margin-bottom: 30px;
+}
+.title-poison-section{
+    font-family: "Cormorant Upright";
+        font-weight: 700;
+        font-size: 23px;
+    color:#FFFFFF;
+    text-align: center;
+    padding-top: 150px;
+}
+.spoon-poison{
+    display: flex;
+    justify-content: center;
+}
+.main-title-poison-section{
+    font-family: "Cormorant Upright";
+        font-weight: 600;
+        font-size: 64px;
+        text-align: center;
+        color: #DCCA87;
+}
+.list-images-drinks{
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    padding-top: 70px;
+}
+.list-images-drinks>li{
+    border: 1px solid rgba(220, 202, 135, 0.2)
+}
+.image-wrapper{
+    position: relative;
+    width: 420px;
+}
+.image-wrapper>img{
+    width: 100%;
+    display: block; 
+    margin: auto;
+}
+.content-image-drink{
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position:absolute;
+    background: rgba(0,0,0,0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: 0.6s;
+}
+.content-image-drink:hover{
+    opacity: 1;
+}
+.image-text-poison{
+    font-family: "Cormorant Upright";
+        font-weight: 600;
+        font-size: 45px;
+        line-height: 58.5px;
+        letter-spacing: 4%;
+        text-align: center;
+}
+.title-happy-hours{
+    font-family: "Cormorant Upright";
+        font-weight: 600;
+        font-size: 128px;
+        line-height: 166.4px;
+        letter-spacing: 3%;
+        color: #DCCA87;
+        text-align: center;
+}
+.content-happy-hours{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    flex-direction: column;
+    padding-top: 300px;
+}
+.schedule-happy-hours{
+    font-family: "Cormorant Upright";
+        font-weight: 700;
+        font-size: 32px;
+        line-height: 41.6px;
+        letter-spacing: 4%;
+        padding-top: 30px;
+}
+.logo-specials{
+    display: flex;
+    justify-content: end;
+    padding-top: 20px;
+}
+.button-specials-bar{
+    display: flex;
+    justify-content: center;
+}
+.todays-special-bar{
+    height: 1280px;
+    background-color: #0c0b08;
+}
+.comment-special-bar{
+    font-family: "Cormorant Upright";
+        font-weight: 700;
+        font-size: 23px;
+        line-height: 29.9px;
+        letter-spacing: 4%;
+        text-align: center;
+}
+.list-find-us{
+    display: flex;
+    gap: 50px;
+    padding-top: 150px;
+    height: 736px;
+}
+.text-contact{
+    font-family: "Cormorant Upright";
+        font-weight: 700;
+        font-size: 23px;
+        line-height: 29.9px;
+        letter-spacing: 4%;
+        color: #FFFFFF;
+        padding-top: 170px;
+}
+.title-find-us{
+    font-family: "Cormorant Upright";
+        font-weight: 600;
+        font-size: 64px;
+        line-height: 83.2px;
+        letter-spacing: 4%;
+        text-align: left;
+        color: #DCCA87;
+}
+.recipe{
+    font-family: "Open Sans";
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 28px;
+        letter-spacing: 4%;
+        padding-top: 70px;
+        color: #AAAAAA;
+        padding-bottom: 30px;
+}
+.title-schedule{
+    font-family: "Cormorant Upright";
+        font-weight: 700;
+        font-size: 23px;
+        line-height: 29.9px;
+        letter-spacing: 4%;
+        color: #DCCA87;
+        padding-bottom: 15px;
+}
+.schedule-working-time{
+    font-family: "Open Sans";
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 28px;
+        letter-spacing: 4%;
+        color: #FFFFFF;
+        padding-bottom: 20px;
+}
+.margin-button{
+    margin-bottom: 40px;
 }
