--- a/style.css
+++ b/style.css
@@ -218,6 +218,22 @@ a{
     background-image: url(./img/bg.png);
     background-repeat: no-repeat;
     background-size: cover;
+    position: relative;
+}
+.about-us::before{
+    content: "";
+    position: absolute;
+    top:47% ;
+    left:50% ;
+    width: 391px;
+    height: 415px;
+    background-image: url(./img/g.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    transform: translate(-50%,-50%);
+    z-index: 0;
+    opacity: 0.7;
 }
 .title-about-us{
         font-family: "Cormorant Upright";
@@ -240,6 +256,8 @@ a{
     margin-bottom: 25px;
 }
 .list-section-about-us{
+    position: relative;
+    z-index: 1;
     display: flex;
     gap: 100px;
     padding-left: 1px;
@@ -310,9 +328,13 @@ padding-top: 150px;
 }
 footer{
     height: 1058px;
-    background-image: url(./img/backgrpound.png);
+    background-image: linear-gradient(to bottom,
+    #0c0c0c 20%,
+    rgba(0,0,0,0)50%),
+    url(./img/bg.png);
     background-repeat: no-repeat;
     background-size: cover;
+
 
 }
 .reservations{
